fixed all of the grids to allow for better whitespace - now need to finish mobile styles

--- a/css/contact-styles.css
+++ b/css/contact-styles.css
@@ -24,6 +24,14 @@ a.contact-color {
                         "picmid"
                         "picright"
 }
+
+.contact-img-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 300px;
+	grid-template-areas: "picleft picmid picright"
+}
+
 hr {
 	height: 1px;
 	background-color: #424242;
@@ -44,6 +52,7 @@ contact-contact {
 	background-color: #0F4F5C;
 	color: #E5E4DE;
 	outline: none;
+	border: none;
 	padding: 20px;
 	width: 150px;
 	text-align: center;
@@ -51,7 +60,11 @@ contact-contact {
 	display: inline-block;
 	font-size: 17px;
 	margin: 10px 10px;
-	border-radius: 100px;
+	border-radius: 2px;
+	transition-duration: 0.2s;
+}
+.button:hover {
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 contact-contact {
 	grid-area: contact;
@@ -113,9 +126,9 @@ contact-picright>img {
 	.contact-grid {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-rows: 400px 300px;
+		grid-template-rows: 400px;
 		grid-template-areas:  "contact contact contact"
-                          "picleft picmid picright"
+
 	}
 	contact-picleft>img {
 		border-right: 1px solid white;
